--- a/R scriptes.Rmd
+++ b/R scriptes.Rmd
@@ -41,7 +41,7 @@ source("Functions.R")
 
 ### file input
 ```{r, echo = FALSE, message = FALSE, include = FALSE}
-Table=read.table("Final_table_dada2.tsv",header=T, row.names = 1) ### ASV table
+RawTable=read.table("Final_table_dada2.tsv",header=T, row.names = 1) ### ASV table
 Meta=read.csv("MetaData.csv",header=T, row.names = 1) ###Meta data
 Taxonomy=read.csv("Taxonomy.csv",header=T, row.names = 1) ###taxonomy data
 ```
@@ -49,7 +49,7 @@ Taxonomy=read.csv("Taxonomy.csv",header=T, row.names = 1) ###taxonomy data
 
 ### ASV table cleaning, removed 0 ASV and community with <2000 reads and matching ASV with taxonomy data, and the corresponding Metatdata
 ```{r, echo = FALSE, message = FALSE, include = FALSE}
-Table_old=Table_old[row.names(Table_old) %in% rownames(Taxonomy[which(Taxonomy$D1!="NA"),]),] ##remove Bacteria-unclassified
+Table=RawTable[row.names(RawTable) %in% rownames(Taxonomy[which(Taxonomy$D1!="NA"),]),] ##remove Bacteria-unclassified
 Table=filter(Table,rowSums(Table)!=0) ##Remove ASV is zero in all samples
 write.csv(colSums(Table),"Table_SampleReads#.csv")
 Table=Table[,which(colSums(Table)>=2000)] ##remove community with <2000 reads
@@ -58,10 +58,10 @@ Table=Table[,which(colSums(Table)>=2000)] ##remove community with <2000 reads
 Hratio=numeric()
 Day=numeric()
 Name=numeric()
-for (i in 1:ncol(CE1_Only)){
-  Hratio[i]=filter(Meta,rownames(Meta) == colnames(CE1_Only)[i])$Hratio
-  Day[i]=filter(Meta,rownames(Meta) == colnames(CE1_Only)[i])$Day
-  Name[i]=rownames(filter(Meta,rownames(Meta) == colnames(CE1_Only)[i]))
+for (i in 1:ncol(Table)){
+  Hratio[i]=filter(Meta,rownames(Meta) == colnames(Table)[i])$Hratio
+  Day[i]=filter(Meta,rownames(Meta) == colnames(Table)[i])$Day
+  Name[i]=rownames(filter(Meta,rownames(Meta) == colnames(Table)[i]))
 }
 Filtered_Meta=data.frame(Day,Hratio)
 rownames(Filtered_Meta)=Name
@@ -73,7 +73,7 @@ rownames(Filtered_Meta)=Name
 ## Microbiome community composition (Ordination analysis) 
 ### Calculate distance matrix and PCoA
 ```{r, echo = FALSE, message = FALSE, include = FALSE}
-BC_dist = avgdist(t(CE1_Only), 2000,  dmethod = "bray") ## calculate Bray-Curtis distance matrix
+BC_dist = avgdist(t(Table), 2000,  dmethod = "bray") ## calculate Bray-Curtis distance matrix
 BC_dist_matrix=as.matrix(BC_dist, labels=TRUE)
 PCOA = pcoa(BC_dist, correction = "cailliez") ## calculate PCoA, correction added in case of negative eigenvalues
 
@@ -95,7 +95,7 @@ par(mar = c(0, 0, 0, 0)) # make the plots be closer together
 PermanovaTable=list()
 
 OrdinationEachDay(MyData,2)
-PermanovaTable[[1]]=PERMANOVAandANOSIM(CE1_Only,Filtered_Meta,2)
+PermanovaTable[[1]]=PERMANOVAandANOSIM(Table,Filtered_Meta,2)
 
 axis(2, at = c(-0.4,-0.3,-0.2,-0.1,0,0.1, 0.2, 0.3, 0.4), label = rep("", 9), tck = -0.03)
 axis(2, las=1, at = c(-0.4,-0.3,-0.2,-0.1,0,0.1, 0.2, 0.3,0.4), cex.axis=0.7, line = -0.5, lwd = 0)
@@ -103,17 +103,17 @@ text(x=-0.2, y = 0.3, label = "(a) Day 2", cex = 1)
 
 OrdinationEachDay(MyData,4)
 
-PermanovaTable[[2]]=PERMANOVAandANOSIM(CE1_Only,Filtered_Meta,4)
+PermanovaTable[[2]]=PERMANOVAandANOSIM(Table,Filtered_Meta,4)
 text(x=-0.2, y = 0.31, label = "(b) Day 4", cex = 1)
 
 OrdinationEachDay(MyData,6)
 
-PermanovaTable[[3]]=PERMANOVAandANOSIM(CE1_Only,Filtered_Meta,6)
+PermanovaTable[[3]]=PERMANOVAandANOSIM(Table,Filtered_Meta,6)
 text(x=-0.2, y = 0.31, label = "(c) Day 6", cex = 1)
 
 OrdinationEachDay(MyData,8)
 
-PermanovaTable[[4]]=PERMANOVAandANOSIM(CE1_Only,Filtered_Meta,8)
+PermanovaTable[[4]]=PERMANOVAandANOSIM(Table,Filtered_Meta,8)
 axis(1, at = c(-0.4,-0.3,-0.2,-0.1,0,0.1, 0.2, 0.3,0.4), label = rep("", 9), tck = -0.03)
 axis(1,las=1, cex.axis=0.6,line = -0.7, lwd = 0)
 axis(2, at = c(-0.4,-0.3,-0.2,-0.1,0,0.1, 0.2, 0.3, 0.4), label = rep("", 9), tck = -0.03)
@@ -122,14 +122,14 @@ text(x=-0.2, y = 0.31, label = "(d) Day 8", cex = 1)
 
 OrdinationEachDay(MyData,10)
 
-PermanovaTable[[5]]=PERMANOVAandANOSIM(CE1_Only,Filtered_Meta,10)
+PermanovaTable[[5]]=PERMANOVAandANOSIM(Table,Filtered_Meta,10)
 axis(1, at = c(-0.4,-0.3,-0.2,-0.1,0,0.1, 0.2, 0.3,0.4), label = rep("", 9), tck = -0.03)
 axis(1,las=1, cex.axis=0.6,line = -0.7, lwd = 0)
 text(x=-0.2, y = 0.31, label = "(e) Day 10", cex = 1)
 
 OrdinationEachDay(MyData,12)
 
-PermanovaTable[[6]]=PERMANOVAandANOSIM(CE1_Only,Filtered_Meta,12)
+PermanovaTable[[6]]=PERMANOVAandANOSIM(Table,Filtered_Meta,12)
 axis(1, at = c(-0.4,-0.3,-0.2,-0.1,0,0.1, 0.2, 0.3,0.4), label = rep("", 9), tck = -0.03)
 axis(1, las=1, cex.axis=0.6, line = -0.7, lwd = 0)
 text(x=-0.2, y = 0.31, label = "(f) Day 12", cex = 1)
@@ -153,12 +153,12 @@ mtext("Axis PCoA 2 (14.1%)", side = 2, outer = TRUE, line = 1.4, cex=0.8)
 
 ### Table S1 Premanova analysis 
 ```{r, echo = FALSE, message = FALSE, include = FALSE}
-Table=matrix(0,6,5)
+PERMANOVA=matrix(0,6,5)
 for (i in 1:6){
-  Table[i,]=as.numeric(PermanovaTable[[i]][1,])
+  PERMANOVA[i,]=as.numeric(PermanovaTable[[i]][1,])
 }
-colnames(Table)=colnames(PermanovaTable[[i]][1,])
-rownames(Table)=c("Day 2", "Day 4", "Day 6", "Day 8","Day 10","Day 12")
+colnames(PERMANOVA)=colnames(PermanovaTable[[i]][1,])
+rownames(PERMANOVA)=c("Day 2", "Day 4", "Day 6", "Day 8","Day 10","Day 12")
 write.csv(Table,"PERMANOVA.csv")
 ```
 
@@ -167,15 +167,15 @@ write.csv(Table,"PERMANOVA.csv")
 
 ### Calcualting diveristy indeices (richness, evenness and Shannon)
 ```{r, echo = FALSE, message = FALSE, include = FALSE}
-ps.rarefied = rarefy_even_depth(otu_table(t(Table_old),taxa_are_rows=F), rngseed=1, sample.size=2000, replace=T)
+ps.rarefied = rarefy_even_depth(otu_table(t(Table),taxa_are_rows=F), rngseed=1, sample.size=2000, replace=T)
 Table_rarefied=t(ps.rarefied)
 Sample_all=colnames(Table_rarefied)
-CE1_Only=Table_rarefied[,which(sapply(strsplit(Sample_all, "H" , fixed = TRUE), "[", 1)=="CE1")]
+Table=Table_rarefied[,which(sapply(strsplit(Sample_all, "H" , fixed = TRUE), "[", 1)=="CE1")]
 ##########################
-Richness=colSums(ifelse(CE1_Only> 1,1,0))
-Shannon=diversity(t(CE1_Only),"shannon")
-Simpson=diversity(t(CE1_Only),"simpson")
-invSimpson=diversity(t(CE1_Only),"invsimpson")
+Richness=colSums(ifelse(Table> 1,1,0))
+Shannon=diversity(t(Table),"shannon")
+Simpson=diversity(t(Table),"simpson")
+invSimpson=diversity(t(Table),"invsimpson")
 Evenness=invSimpson/Richness
 Day=sapply(strsplit(sapply(strsplit(names(Richness), "D" , fixed = TRUE), "[", 2),"R",fixed=T),"[",1)
 H=sapply(strsplit(sapply(strsplit(names(Richness), "H" , fixed = TRUE), "[", 2),"D",fixed=T),"[",1)
@@ -319,21 +319,21 @@ mtext("Day 12", side = 3, outer = TRUE, line = 0, cex=0.8, at=0.75, font=1)
 ### This can be modified and remove
 ```{r, echo = FALSE, message = FALSE, include = FALSE}
 #########Rarefaction######
-ps.rarefied = rarefy_even_depth(otu_table(t(Table_old),taxa_are_rows=F), 
+ps.rarefied = rarefy_even_depth(otu_table(t(Table),taxa_are_rows=F), 
                                 rngseed=1, sample.size=2000, replace=T)
 Table_rarefied=t(ps.rarefied)
 Sample_all=colnames(Table_rarefied)
-CE1_Only=Table_rarefied[,which(sapply(strsplit(Sample_all, "H" , fixed = TRUE), "[", 1)=="CE1")]
-Sample=colnames(CE1_Only)
+Table=Table_rarefied[,which(sapply(strsplit(Sample_all, "H" , fixed = TRUE), "[", 1)=="CE1")]
+Sample=colnames(Table)
 ```
 
 ###Data organization
 ```{r, echo = FALSE, message = FALSE, include = FALSE}
 ##Prepare cor data
-ASVreaction= data.frame(matrix(ncol = 3, nrow = nrow(CE1_Only)))
-CE1_Only[apply(CE1_Only!=0, 1, all),]
-for (i in 1:nrow(CE1_Only)){
-  ASV=CE1_Only[i,]
+ASVreaction= data.frame(matrix(ncol = 3, nrow = nrow(Table)))
+Table[apply(Table!=0, 1, all),]
+for (i in 1:nrow(Table)){
+  ASV=Table[i,]
   Day=sapply(strsplit(sapply(strsplit(colnames(ASV), "D" , fixed = TRUE), "[", 2), "R" , fixed = TRUE), "[", 1)
   Hratio=sapply(strsplit(sapply(strsplit(colnames(ASV), "D" , fixed = TRUE), "[", 1), "H" , fixed = TRUE), "[", 2)
   D=data.frame(t(ASV),as.numeric(Day),as.numeric(Hratio))
@@ -347,19 +347,19 @@ for (i in 1:nrow(CE1_Only)){
 }
 colnames(ASVreaction)[3]="ReadSum"
 write.csv(ASVreaction,"ASV-Hratio_atDay12.csv")
-all(rownames(ASVreaction)==rownames(CE1_Only))
+all(rownames(ASVreaction)==rownames(Table))
 ###Prepare relative abundance data
-Day=sapply(strsplit(sapply(strsplit(colnames(CE1_Only), "D" , fixed = TRUE), "[", 2), "R" , fixed = TRUE), "[", 1)
-D12_CE1_Only=CE1_Only[,which(Day==12)]
-CE1_Only=CE1_Only[rowSums(CE1_Only)>0,]
-Hratio=sapply(strsplit(sapply(strsplit(colnames(D12_CE1_Only), "D" , fixed = TRUE), "[", 1), "H" , fixed = TRUE), "[", 2)
+Day=sapply(strsplit(sapply(strsplit(colnames(Table), "D" , fixed = TRUE), "[", 2), "R" , fixed = TRUE), "[", 1)
+D12_Table=Table[,which(Day==12)]
+Table=Table[rowSums(Table)>0,]
+Hratio=sapply(strsplit(sapply(strsplit(colnames(D12_Table), "D" , fixed = TRUE), "[", 1), "H" , fixed = TRUE), "[", 2)
 SUMReadEachHratio=data.frame(
-  rowSums(D12_CE1_Only[,which(Hratio==0)])/5,
-  rowSums(D12_CE1_Only[,which(Hratio==5)])/5,
-  rowSums(D12_CE1_Only[,which(Hratio==25)])/5,
-  rowSums(D12_CE1_Only[,which(Hratio==50)])/5,
-  rowSums(D12_CE1_Only[,which(Hratio==75)])/5,
-  rowSums(D12_CE1_Only[,which(Hratio==100)])/5)
+  rowSums(D12_Table[,which(Hratio==0)])/5,
+  rowSums(D12_Table[,which(Hratio==5)])/5,
+  rowSums(D12_Table[,which(Hratio==25)])/5,
+  rowSums(D12_Table[,which(Hratio==50)])/5,
+  rowSums(D12_Table[,which(Hratio==75)])/5,
+  rowSums(D12_Table[,which(Hratio==100)])/5)
 DATA=data.frame(ASVreaction,SUMReadEachHratio)
 DATA=DATA[which(rowSums(DATA)>0),]
 colnames(DATA)=c("Cor","P-value","SUM","H0Mean","H5Mean","H25Mean","H50Mean","H75Mean","H100Mean")
@@ -859,13 +859,13 @@ FigureS4_Diveristy=function(Table_old){
   
   Table_rarefied=t(ps.rarefied)
   Sample_all=colnames(Table_rarefied)
-  CE1_Only=Table_rarefied[,which(sapply(strsplit(Sample_all, "H" , fixed = TRUE), "[", 1)=="CE1")]
+  Table=Table_rarefied[,which(sapply(strsplit(Sample_all, "H" , fixed = TRUE), "[", 1)=="CE1")]
   ##########################
   
-  Richness=colSums(ifelse(CE1_Only> 1,1,0))
-  Shannon=diversity(t(CE1_Only),"shannon")
-  Simpson=diversity(t(CE1_Only),"simpson")
-  invSimpson=diversity(t(CE1_Only),"invsimpson")
+  Richness=colSums(ifelse(Table> 1,1,0))
+  Shannon=diversity(t(Table),"shannon")
+  Simpson=diversity(t(Table),"simpson")
+  invSimpson=diversity(t(Table),"invsimpson")
   Evenness=invSimpson/Richness
   Day=sapply(strsplit(sapply(strsplit(names(Richness), "D" , fixed = TRUE), "[", 2),"R",fixed=T),"[",1)
   H=sapply(strsplit(sapply(strsplit(names(Richness), "H" , fixed = TRUE), "[", 2),"D",fixed=T),"[",1)
