--- a/R scriptes.Rmd
+++ b/R scriptes.Rmd
@@ -30,7 +30,7 @@ packages = lapply(necessary_packages, library, character.only = TRUE)
 #setwd("~/Feedback-Innate-exp")
 
 ### Source written functions in the file Functions.R that is housed within the "Feedback-Innate-exp"
-source("Functions_updated_202401.R")
+source("Functions.R")
 ```
 
 ### Import Data 
